--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <title>SITCON 真．實境矩陣</title>
+    <title>{{ Conf Name }} × OPass {{ Title zh-TW }} {{ Title en }}</title>
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet" type="text/css">
     <!-- <link href="static/favicon.ico" rel="shortcut icon">
     <link href="static/favicon.ico" rel="icon"> -->
@@ -13,7 +13,7 @@
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but SITCON 真．實境矩陣 doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but {{ Title zh-TW }}({{ Title en }}) doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
